index.js added to core folder. dark mode added to local storage. lots of bug fixed.

--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,10 @@
 @tailwind components;
 @tailwind utilities;
 
+:root {
+  background-color: #000;
+}
+
 body {
   direction: rtl;
   user-select: none;
